# trickster

./: cli.py  gunicorn.conf.py  noxfile.py  pyproject.toml  setup.py
tests/: __init__.py
tests/integration/: __init__.py  test_external_endpoints.py  test_internal_endpoints.py  test_utility_endpoints.py
tests/unit/: __init__.py  test_api_app.py  test_collections.py  test_config.py  test_sys.py  test_validation.py
tests/unit/routing/: test_auth.py  test_input.py  test_router.py  test_routing.py
trickster/: api_app.py  collections.py  config.py  validation.py
trickster/endpoints/: external.py  internal.py  utility.py
trickster/routing/: __init__.py  auth.py  input.py  router.py
